# PNGSLIDE

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  main.c  pngSlide.c  pngSlide.h  pngle.c  pngle.h
spiffs_files/: pg.csv
